syntax = "proto3";
package userproto.common.shipments;

message ShipmentType {
    string from = 1;
    string to = 2;
    string carrier = 3;
}